snake/base/snake-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: le
  name: snake
spec:
  ingressClassName: nginx
  rules:
  - host: snake-hl.apps.caas.fr
    http:
      paths:
      - backend:
          service:
            name: snake
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - snake-hl.apps.caas.fr
    secretName: snake-fbouche.apps.caas.fr-tls
